docs: add docs to update post
